# MuZero-rs

./: .gitignore  Cargo.toml  README.md  config.yaml  todo.md
benches/: search_speed.rs
configs/: config.yaml  config_inference.yaml
crates/mz-train/: Cargo.toml  agent.rs  lib.rs  mz_config.rs  replay_buffer.rs  train.rs  utils.rs
crates/mz-train/benches/: search_speed.rs  throughput.rs
crates/mz-train/env/: mod.rs
crates/mz-train/env/cartpole/: env.rs
crates/mz-train/env/othello/: env.rs
crates/mz-train/env/tictactoe/: env.rs
crates/mz-train/networks/: dynamic.rs  mod.rs  prediction.rs  representation.rs  resblock.rs  resnet.rs
crates/mz-train/search/: mod.rs  search_parallel.rs  search_serial.rs
crates/mz-train/src/: agent.rs  lib.rs  mz_config.rs  optim.rs  replay_buffer.rs  search.rs  support.rs  train.rs  tui_metrics.rs  utils.rs
crates/mz-train/src/benches/: batch_speed_test.rs  batched_throughput.rs  resnet_backend_bench.rs  search_speed.rs  throughput.rs
crates/mz-train/src/env/: mod.rs
crates/mz-train/src/env/atari/: env.rs
crates/mz-train/src/env/cartpole/: env.rs
crates/mz-train/src/env/othello/: env.rs
crates/mz-train/src/env/tictactoe/: env.rs
crates/mz-train/src/networks/: dynamic.rs  mod.rs  prediction.rs  resnet.rs
crates/mz-train/src/search/: mod.rs  node.rs  search_batched.rs  search_parallel.rs  search_serial.rs
crates/mz-train/tests/: batched_wgpu_smoke.rs
crates/mz-web/: Cargo.toml  lib.rs  search.rs
model/: best.mpk  latest.mpk
model.bak/: latest.mpk
src/: agent.rs  env.rs  lib.rs  mz_config.rs  replay_buffer.rs  search.rs  train.rs  utils.rs
src/networks/: dynamic.rs  mod.rs  prediction.rs  representation.rs
