[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
burn = { version = "~0.21", default-features = false }
burn-import = { version = "~0.21", features = ["onnx"] }
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.10.1"
rand_distr = "0.6.0"
